--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,177 @@
-
+alabaster==0.7.12
+anyio==3.3.0
+appdirs==1.4.4
+argon2-cffi==21.1.0
+arrow==1.1.1
+astroid==2.3.3
+atomicwrites==1.4.0
+attrs==21.2.0
+Babel==2.9.1
+backcall==0.2.0
+binaryornot==0.4.4
+bleach==4.1.0
+blessings==1.7
+boto3==1.18.49
+botocore==1.21.49
+cached-property==1.5.2
+cameo==0.13.0
+carveme==1.5.1
+certifi==2021.5.30
+cffi==1.14.6
+chardet==4.0.0
+charset-normalizer==2.0.4
+click==8.0.1
+click-configfile==0.2.3
+click-default-group==1.2.2
+click-log==0.3.2
+cobra==0.21.0
+colorama==0.4.3
+commonmark==0.9.1
+configparser==5.0.2
+cookiecutter==1.7.3
+cryptography==3.4.8
+cycler==0.10.0
+datapackage==1.15.2
+debugpy==1.4.1
+decorator==5.0.9
+defusedxml==0.7.1
+depinfo==1.7.0
+diskcache==5.2.1
+docutils==0.17.1
+entrypoints==0.3
+Escher==1.7.3
+et-xmlfile==1.1.0
+future==0.18.2
+gitdb==4.0.7
+GitPython==3.1.24
+gnomic==1.0.1
+goodtables==2.5.4
+grako==3.18.1
+greenlet==1.1.1
+h11==0.12.0
+httpcore==0.13.6
+httpx==0.19.0
+idna==3.2
+ijson==3.1.4
+imagesize==1.2.0
+importlib-resources==5.2.2
+inspyred==1.0.1
+IProgress==0.4
+ipykernel==6.3.1
+ipython==7.27.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isodate==0.6.0
+isort==4.3.21
+jedi==0.18.0
+Jinja2==2.11.3
+jinja2-time==0.2.0
+jmespath==0.10.0
+joblib==1.0.1
+jsonlines==2.0.0
+jsonpointer==2.1
+jsonschema==3.2.0
+jupyter-client==7.0.2
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+keras==2.6.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+linear-tsv==1.1.0
+lxml==4.4.2
+MarkupSafe==2.0.1
+matplotlib==3.1.2
+matplotlib-inline==0.1.2
+mccabe==0.6.1
+memote==0.13.0
+mistune==0.8.4
+more-itertools==8.8.0
+mpmath==1.2.1
+nbclient==0.5.4
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.6.2
+notebook==6.4.3
+numexpr==2.7.3
+numpy==1.18.1
+numpydoc==1.1.0
+openpyxl==3.0.7
+optlang==1.4.2
+ordered-set==4.0.2
+packaging==21.0
+palettable==3.3.0
+pandas==1.3.2
+pandocfilters==1.4.3
+parso==0.8.2
+pickleshare==0.7.5
+pluggy==0.13.1
+poyo==0.5.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.20
+py==1.10.0
+pycparser==2.20
+pydantic==1.8.2
+Pygments==2.10.0
+pylint==2.4.4
+pylru==1.2.0
+pyparsing==2.4.6
+pyperclip==1.6.0
+pyrsistent==0.18.0
+pytest==4.6.11
+python-dateutil==2.8.1
+python-libsbml==5.19.0
+python-slugify==5.0.2
+pytz==2019.3
+pywin32==301
+pywinpty==0.5.7
+PyYAML==5.4.1
+pyzmq==22.2.1
+reframed==1.2.1
+requests==2.26.0
+rfc3986==1.5.0
+rich==6.2.0
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
+s3transfer==0.5.0
+scikit-learn==1.0
+scipy==1.4.1
+seaborn==0.9.0
+Send2Trash==1.8.0
+simpleeval==0.9.10
+six==1.13.0
+sklearn==0.0
+smmap==4.0.0
+sniffio==1.2.0
+snowballstemmer==2.1.0
+Sphinx==4.2.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==1.4.25
+statistics==1.0.3.5
+swiglpk==5.0.3
+sympy==1.8
+tableschema==1.20.2
+tabulator==1.53.5
+terminado==0.9.5
+testpath==0.5.0
+text-unidecode==1.3
+threadpoolctl==2.2.0
+tornado==6.1
+traitlets==5.1.0
+travis-encrypt==1.1.2
+typing-extensions==3.10.0.2
+unicodecsv==0.14.1
+urllib3==1.26.6
+urlopen==1.0.0
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+wrapt==1.11.2
+xlrd==2.0.1
+zipp==3.5.0
